fix resp header and cart + overflow home carousel

--- a/src/components/CartModel/CartModelItem/style.module.scss
+++ b/src/components/CartModel/CartModelItem/style.module.scss
@@ -130,7 +130,7 @@
 .colorOptions {
   position: absolute;
   bottom: rem(-12px);
-  left: 50%;
+  right: 0;
   width: fit-content;
   min-width: rem(60px);
   border: rem(1px) solid var(--black-08-20);
