--- a/src/modules/Home/BestSeller/style.module.scss
+++ b/src/modules/Home/BestSeller/style.module.scss
@@ -1,6 +1,7 @@
 .bestSellerSection {
   background: var(--black-08);
   padding: rem(40px) 0;
+  overflow: hidden;
 
   .container {
     .itemInfo {
